made google colab notebook

--- a/examples/make_your_own.ipynb
+++ b/examples/make_your_own.ipynb
@@ -13,7 +13,18 @@
     "- Client id\n",
     "- Client secret\n",
     "\n",
-    "Enter the values in cell 2, and run the notebook."
+    "Enter the values in cell 4, and run the notebook (depending on how many activities you have in your Strava account, this might take several minutes).\n",
+    "\n",
+    "**Note:** Strava imposes some request limits (30'000/day, and 600/every 15min). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install stravaio folium"
    ]
   },
   {
@@ -23,14 +34,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import requests\n",
-    "import logging\n",
-    "import json\n",
     "import folium\n",
-    "import time\n",
     "from stravaio import StravaIO\n",
-    "from stravaio import strava_oauth2\n",
-    "from branca.element import Template, MacroElement"
+    "from stravaio import strava_oauth2"
    ]
   },
   {
@@ -77,6 +83,7 @@
     "    zoom_start=11.5,\n",
     "    control_scale=True\n",
     ")\n",
+    "\n",
     "folium.TileLayer(\"cartodbdark_matter\").add_to(m)\n",
     "folium.TileLayer('cartodbpositron').add_to(m)\n",
     "folium.LayerControl().add_to(m)"
@@ -88,7 +95,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
     "for a in activities:\n",
     "    if a.type == \"Workout\":\n",
     "        continue\n",
