Reduce GPS point sampling.

--- a/examples/make_your_own.ipynb
+++ b/examples/make_your_own.ipynb
@@ -34,6 +34,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import logging\n",
     "import folium\n",
     "from stravaio import StravaIO\n",
     "from stravaio import strava_oauth2"
@@ -95,43 +96,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for a in activities:\n",
-    "    if a.type == \"Workout\":\n",
-    "        continue\n",
-    "    streams = client.get_activity_streams(a.id, athlete.id)\n",
-    "    try:\n",
-    "        points = list(zip(streams.lat, streams.lng))\n",
-    "        if a.type == \"Run\":\n",
-    "            folium.PolyLine(\n",
-    "                locations=points, color=\"#ff9933\", opacity=1 / 2, weight=1\n",
-    "            ).add_to(m)\n",
-    "        elif a.type == \"Ride\":\n",
-    "            folium.PolyLine(\n",
-    "                locations=points, color=\"#0066ff\", opacity=1 / 2, weight=1\n",
-    "            ).add_to(m)\n",
-    "        elif a.type == \"NordicSki\":\n",
-    "            folium.PolyLine(\n",
-    "                locations=points, color=\"#00ffff\", opacity=1 / 2, weight=1\n",
-    "            ).add_to(m)\n",
-    "        elif a.type == \"AlpineSki\":\n",
-    "            folium.PolyLine(\n",
-    "                locations=points, color=\"#00ccff\", opacity=1 / 2, weight=1\n",
-    "            ).add_to(m)\n",
-    "        elif a.type == \"Canoeing\":\n",
-    "            folium.PolyLine(\n",
-    "                locations=points, color=\"#00ff55\", opacity=1 / 2, weight=1\n",
-    "            ).add_to(m)\n",
-    "        elif a.type == \"IceSkate\":\n",
-    "            folium.PolyLine(\n",
-    "                locations=points, color=\"#f6ff00\", opacity=1 / 2, weight=1\n",
-    "            ).add_to(m)\n",
-    "        else:\n",
-    "            folium.PolyLine(\n",
-    "                locations=points, color=\"#cc00ff\", opacity=1 / 2, weight=1\n",
-    "            ).add_to(m)\n",
-    "        logging.critical(\"Mapped activity with id: {}\".format(a.id))\n",
-    "    except:\n",
-    "        logging.error(\"Could not map activity with id: {}\".format(a.id))"
+    "def downsample(l, n):\n",
+    "    \"\"\"Returns every nth element from list l. Returns the\n",
+    "    original list if n is set to 1.\n",
+    "    Used to reduce the number of GPS points per activity,\n",
+    "    to improve performance of the website.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return l[0::n]\n",
+    "\n",
+    "def map_activities(activities, folium_map, opacity=0.5, weight=1):\n",
+    "    if len(activities) == 0:\n",
+    "        logging.info(\"No activities found, returning empty folium map.\")\n",
+    "        return folium_map\n",
+    "\n",
+    "    counter = 0\n",
+    "    for a in activities:\n",
+    "        if a.type == \"Workout\":\n",
+    "            continue\n",
+    "        streams = client.get_activity_streams(a.id, athlete.id)\n",
+    "        try:\n",
+    "            points = list(zip(streams.lat, streams.lng))\n",
+    "            points = downsample(l=points, n=2)\n",
+    "            if a.type == \"Run\":\n",
+    "                folium.PolyLine(\n",
+    "                    locations=points, color=\"#ff9933\", opacity=opacity, weight=weight\n",
+    "                ).add_to(folium_map)\n",
+    "            elif a.type == \"Ride\":\n",
+    "                folium.PolyLine(\n",
+    "                    locations=points, color=\"#0066ff\", opacity=opacity, weight=weight\n",
+    "                ).add_to(folium_map)\n",
+    "            elif a.type == \"NordicSki\":\n",
+    "                folium.PolyLine(\n",
+    "                    locations=points, color=\"#00ffff\", opacity=opacity, weight=weight\n",
+    "                ).add_to(folium_map)\n",
+    "            elif a.type == \"AlpineSki\":\n",
+    "                folium.PolyLine(\n",
+    "                    locations=points, color=\"#00ccff\", opacity=opacity, weight=weight\n",
+    "                ).add_to(folium_map)\n",
+    "            elif a.type == \"Canoeing\":\n",
+    "                folium.PolyLine(\n",
+    "                    locations=points, color=\"#00ff55\", opacity=opacity, weight=weight\n",
+    "                ).add_to(folium_map)\n",
+    "            elif a.type == \"IceSkate\":\n",
+    "                folium.PolyLine(\n",
+    "                    locations=points, color=\"#f6ff00\", opacity=opacity, weight=weight\n",
+    "                ).add_to(folium_map)\n",
+    "            else:\n",
+    "                folium.PolyLine(\n",
+    "                    locations=points, color=\"#cc00ff\", opacity=opacity, weight=weight\n",
+    "                ).add_to(folium_map)\n",
+    "            logging.critical(\"Mapped activity with id: {}\".format(a.id))\n",
+    "        except Exception:\n",
+    "            logging.error(\"Could not map activity with id: {}\".format(a.id))\n",
+    "            \n",
+    "    return folium_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = map_activities(\n",
+    "    activities=activities,\n",
+    "    folium_map=m,\n",
+    "    opacity=0.5,\n",
+    "    weight=2\n",
+    ")"
    ]
   },
   {
