Change default tiles to cartodbpositron.

--- a/examples/make_your_own.ipynb
+++ b/examples/make_your_own.ipynb
@@ -79,14 +79,13 @@
    "source": [
     "m = folium.Map(\n",
     "    name=\"Strava Heatmap\",\n",
-    "    tiles=\"cartodbdark_matter\",\n",
-    "    location=[59.925,10.728123],\n",
+    "    tiles=\"cartodbpositron\",\n",
+    "    location=[59.925, 10.728123],\n",
     "    zoom_start=11.5,\n",
-    "    control_scale=True\n",
+    "    control_scale=True,\n",
     ")\n",
-    "\n",
+    "folium.TileLayer(\"cartodbpositron\").add_to(m)\n",
     "folium.TileLayer(\"cartodbdark_matter\").add_to(m)\n",
-    "folium.TileLayer('cartodbpositron').add_to(m)\n",
     "folium.LayerControl().add_to(m)"
    ]
   },
