Make tutorial run on Google Colab.

--- a/examples/make_your_own.ipynb
+++ b/examples/make_your_own.ipynb
@@ -13,8 +13,6 @@
     "- Client id\n",
     "- Client secret\n",
     "\n",
-    "Enter the values in cell 4, and run the notebook (depending on how many activities you have in your Strava account, this might take several minutes).\n",
-    "\n",
     "**Note:** Strava imposes some request limits (30'000/day, and 600/every 15min). "
    ]
   },
@@ -35,9 +33,11 @@
    "source": [
     "import os\n",
     "import logging\n",
+    "import json\n",
+    "import urllib\n",
+    "import requests\n",
     "import folium\n",
-    "from stravaio import StravaIO\n",
-    "from stravaio import strava_oauth2"
+    "from stravaio import StravaIO"
    ]
   },
   {
@@ -46,8 +46,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['STRAVA_CLIENT_ID'] = \"ENTER-YOUR-CLIENT-ID\"\n",
-    "os.environ['STRAVA_CLIENT_SECRET'] = \"ENTER-YOUR-CLIENT-SECRET\""
+    "# Paste your client id and client secret here.\n",
+    "STRAVA_CLIENT_ID = \"ENTER-YOUR-CLIENT-ID\"\n",
+    "STRAVA_CLIENT_SECRET = \"ENTER-YOUR-CLIENT-SECRET\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Authorization with Strava\n",
+    "The cell below creates the proper authorization link using the Stravaio Python library, which is used later to retrieve activities.\n",
+    "It is important to run this cell, just pasting the access_token from your Strava settings will not work, because Stravaio needs to be authorized.\n",
+    "\n",
+    "- Run the cell below and click the link that is printed, when prompted click \"Authorize\" on the website that opens\n",
+    "- After you click \"Authorize\" you see something like, \"This site can't be reached\"\n",
+    "- Stay on that page and look at the URL\n",
+    "- The URL will show the authorization code (the bit after \"code=\" in the URL) and scope you accepted\n",
+    "- Copy the code and paste it below and continue the notebook execution\n",
+    "\n",
+    "More detailed info can be found here:\n",
+    "- <https://developers.strava.com/docs/getting-started/>\n",
+    "- <https://developers.strava.com/docs/authentication/>"
    ]
   },
   {
@@ -56,8 +76,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This will open a browser, asking for permission to access your Strava account, click authorize to continue\n",
-    "auth = strava_oauth2(client_id=os.environ[\"STRAVA_CLIENT_ID\"], client_secret=os.environ[\"STRAVA_CLIENT_SECRET\"])"
+    "params_oauth = {\n",
+    "    \"client_id\": STRAVA_CLIENT_ID,\n",
+    "    \"response_type\": \"code\",\n",
+    "    \"redirect_uri\": f\"http://localhost:8000/authorization_successful\",\n",
+    "    \"scope\": \"read,profile:read_all,activity:read\",\n",
+    "    \"state\": 'https://github.com/sladkovm/strava-http', # Sladkovm is the author of the Stravaio library\n",
+    "    \"approval_prompt\": \"force\"\n",
+    "}\n",
+    "values_url = urllib.parse.urlencode(params_oauth)\n",
+    "base_url = 'https://www.strava.com/oauth/authorize'\n",
+    "authorize_url = base_url + '?' + values_url\n",
+    "print(authorize_url)"
    ]
   },
   {
@@ -66,7 +96,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = StravaIO(access_token=auth[\"access_token\"])\n",
+    "# Paste the code from the URL here. Afterwards there are no manual steps anymore.\n",
+    "AUTHORIZATION_CODE = \"ENTER-YOUR-AUTHORIZATION-CODE\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cell retrieves an access token using the authorization code. That access token can then be used to retrieve Strava data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "payload = {\n",
+    "    \"client_id\": STRAVA_CLIENT_ID,\n",
+    "    \"client_secret\": STRAVA_CLIENT_SECRET,\n",
+    "    \"grant_type\": \"authorization_code\",\n",
+    "    \"code\": AUTHORIZATION_CODE,\n",
+    "}\n",
+    "\n",
+    "response = requests.request(\n",
+    "    \"POST\", \"https://www.strava.com/api/v3/oauth/token\", data=payload\n",
+    ")\n",
+    "\n",
+    "response = json.loads(response.text)\n",
+    "TOKEN = response[\"access_token\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = StravaIO(access_token=TOKEN)\n",
     "athlete = client.get_logged_in_athlete()\n",
     "activities = client.get_logged_in_athlete_activities(after=20170101)"
    ]
@@ -78,11 +146,10 @@
    "outputs": [],
    "source": [
     "m = folium.Map(\n",
-    "    name=\"Strava Heatmap\",\n",
     "    tiles=\"cartodbpositron\",\n",
     "    location=[59.925, 10.728123],\n",
     "    zoom_start=11.5,\n",
-    "    control_scale=True,\n",
+    "    control_scale=True\n",
     ")\n",
     "folium.TileLayer(\"cartodbpositron\").add_to(m)\n",
     "folium.TileLayer(\"cartodbdark_matter\").add_to(m)\n",
