--- a/examples/make_your_own.ipynb
+++ b/examples/make_your_own.ipynb
@@ -134,6 +134,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install stravaio folium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "client = StravaIO(access_token=TOKEN)\n",
     "athlete = client.get_logged_in_athlete()\n",
     "activities = client.get_logged_in_athlete_activities(after=20170101)"
